[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/effects/fireball_emp_1.png" type="Texture" id=1]
[ext_resource path="res://sprites/effects/fireball_emp_0.png" type="Texture" id=2]
[ext_resource path="res://Fireball_Emp.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "Shoot",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 5 )

[node name="Fireball_Emp" type="Area2D"]
script = ExtResource( 3 )

[node name="Fireball_Ani" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "Shoot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 0 )
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Fireball_Emp_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
